--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altgraph==0.17.3
 black==23.3.0
 click==8.1.3
 colorama==0.4.6
+tkinter
 imageio-ffmpeg==0.4.8
 imageio==2.28.1
 mypy-extensions==1.0.0
