--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-tk
           python -m pip install -r requirements.txt
       - name: Run tests
         run: python -m unittest test_imgc
